--- a/Poketrainer-API/Poketrainer-API.csproj
+++ b/Poketrainer-API/Poketrainer-API.csproj
@@ -9,8 +9,9 @@
 
     <ItemGroup>
         <PackageReference Include="FuzzySharp" Version="2.0.2" />
-        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="10.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="10.0.1" />
+        <PackageReference Include="Scalar.AspNetCore" Version="2.11.10" />
         <PackageReference Include="Yort.Ntp.Portable" Version="2.0.0" />
     </ItemGroup>
 
